--- a/src/app/shared/auth/auth-header/auth-header.component.html
+++ b/src/app/shared/auth/auth-header/auth-header.component.html
@@ -4,7 +4,7 @@
         <a class="navbar-brand" routerLink="/auth/login">
             <div class="row">
                 <div class="col-auto">
-                    <img src="https://web-altux-files.s3.amazonaws.com/infinity/logo+infinity+azul+altux.png" 
+                    <img src="https://web-altux-files.s3.amazonaws.com/LOGO_INFINITY-01.png" 
                     name="logoimage" class="mx-100" alt="" />
                 </div>
                 <!-- <div class="col ps-0 align-self-center">
