--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -8,7 +8,7 @@
             <a class="navbar-brand ms-2" routerLink="/alumno/panel">
                 <div class="row">
                     <div class="col-auto">
-                        <img src="https://web-altux-files.s3.amazonaws.com/infinity/Logo+Infinity+by+altux+en+blanco+completo.png" 
+                        <img src="https://web-altux-files.s3.amazonaws.com/LOGO_INFINITY-02.png" 
                             name="logoimage" class="blanco mx-100" alt="" />
                     </div>
                     <!-- <div class="col ps-0 align-self-center d-none d-sm-block">
