--- a/src/app/auth/form-pay-matricula/form-pay-matricula.component.html
+++ b/src/app/auth/form-pay-matricula/form-pay-matricula.component.html
@@ -13,7 +13,7 @@
                     <a class="navbar-brand" routerLink="/auth/login">
                         <div class="row">
                             <div class="col-auto">
-                                <img src="https://web-altux-files.s3.amazonaws.com/infinity/Logo+Infinity+by+altux+en+blanco+completo.png" 
+                                <img src="https://web-altux-files.s3.amazonaws.com/LOGO_INFINITY-02.png" 
                                 name="logoimage" class="mx-100" alt="" />
                             </div>
                         </div>
@@ -29,10 +29,10 @@
                         <div class="card-header">
                             <div class="row align-items-center">
                                 <div class="col-2">
-                                    <img src="https://web-altux-files.s3.amazonaws.com/infinity/logo+infinity+azul+altux.png" alt="" />
+                                    <img src="https://web-altux-files.s3.amazonaws.com/LOGO_INFINITY-01.png" alt="" />
                                 </div>
                                 <div class="col align-self-center text-center">
-                                    <h5 class="fw-normal">User Onboarding</h5>
+                                    <h5 class="fw-normal">Pago Diplomado</h5>
                                 </div>
                             </div>
                         </div>
@@ -70,7 +70,7 @@
                                                                 <li class="list-group-item text-secondary">
                                                                     <div class="row">
                                                                         <div class="col-auto">
-                                                                            <i class="bi bi-check-circle text-muted"></i>
+                                                                            <i class="bi bi-person-circle text-muted"></i>
                                                                         </div>
                                                                         <div class="col-auto ps-0">
                                                                             Estudiante: {{data.nombres}} {{data.apellidos}}
@@ -90,7 +90,7 @@
                                                                 <li class="list-group-item text-secondary">
                                                                     <div class="row">
                                                                         <div class="col-auto">
-                                                                            <i class="bi bi-check-circle text-muted"></i>
+                                                                            <i class="bi bi-phone-fill text-muted"></i>
                                                                         </div>
                                                                         <div class="col-auto ps-0">
                                                                             Celular: {{data.telefono}}
@@ -100,7 +100,7 @@
                                                                 <li class="list-group-item text-secondary">
                                                                     <div class="row">
                                                                         <div class="col-auto">
-                                                                            <i class="bi bi-check-circle text-muted"></i>
+                                                                            <i class="bi bi-person-vcard-fill text-muted"></i>
                                                                         </div>
                                                                         <div class="col-auto ps-0">
                                                                             Dni: {{data.num_documento}}
@@ -127,7 +127,7 @@
                                                                 <li class="list-group-item text-secondary">
                                                                     <div class="row">
                                                                         <div class="col-auto">
-                                                                            <i class="bi bi-check-circle text-muted"></i>
+                                                                            <i class="bi bi-award-fill text-muted"></i>
                                                                         </div>
                                                                         <div class="col-auto ps-0">
                                                                             Diplomado: {{data.discount.diplomado_name}}
@@ -137,7 +137,8 @@
                                                                 <li class="list-group-item text-secondary">
                                                                     <div class="row">
                                                                         <div class="col-auto">
-                                                                            <i class="bi bi-check-circle text-muted"></i>
+                                                                            <!-- <i class="bi bi-check-circle text-muted"></i> -->
+                                                                            <i class="bi bi-bookmark-star-fill text-muted"></i>
                                                                         </div>
                                                                         <div class="col-auto ps-0" *ngIf="data.tipo_matricula=='prematricula'||data.type_matricula=='prematricula'">
                                                                             Matrícula
@@ -217,20 +218,22 @@
                                             <p class="h4 fw-light mb-3">Escoge el Método de Pago</p>
                                             <div class="row d-flex justify-content-center gx-3" id="domain-select">
                                                 <div class="col-auto">
-                                                    <div class="select-box text-center mb-3" [ngClass]="{'active': domain === 'finance'}" data-title="finance" (click)="selectDomain('finance')">
+                                                    <button class="btn btn-dark">Tarjeta Crédito/Débito</button>
+                                                    <!-- <div class="select-box text-center mb-3" [ngClass]="{'active': domain === 'finance'}" data-title="finance" (click)="selectDomain('finance')">
                                                         <div class="avatar avatar-60">
                                                             <i class="bi bi-coin"></i>
                                                         </div>
                                                         <p class="small">Tarjeta Crédito/Débito</p>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                                 <div class="col-auto">
-                                                    <div class="select-box text-center mb-3" [ngClass]="{'active': domain === 'network'}" data-title="network" (click)="selectDomain('network')">
+                                                    <button class="btn btn-warning">Pago Efectivo</button>
+                                                    <!-- <div class="select-box text-center mb-3" [ngClass]="{'active': domain === 'network'}" data-title="network" (click)="selectDomain('network')">
                                                         <div class="avatar avatar-60">
                                                             <i class="bi bi-wifi"></i>
                                                         </div>
                                                         <p class="small">Pago Efectivo</p>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                             </div>
                                             <form [formGroup]="formExcPay" class="row">
@@ -391,9 +394,9 @@
                                 <div class="col-auto">
                                     <button class="btn btn-theme btn-square btn-prev"><i class="bi bi-arrow-left"></i></button>
                                 </div>
-                                <div class="col align-self-center">
+                                <!-- <div class="col align-self-center">
                                     <div class="pagination-wrap swiper-pagination pagination-smallline position-relative bottom-0"></div>
-                                </div>
+                                </div> -->
                                 <div class="col-auto">
                                     <button class="btn btn-theme btn-square btn-next"><i class="bi bi-arrow-right"></i></button>
                                 </div>
