--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -9,7 +9,7 @@
                 <div class="row">
                     <div class="col-auto">
                         <img src="https://web-altux-files.s3.amazonaws.com/LOGO_INFINITY-02.png" 
-                            name="logoimage" class="blanco mx-100" alt="" />
+                            name="logoimage" class="mx-100" alt="" />
                     </div>
                     <!-- <div class="col ps-0 align-self-center d-none d-sm-block">
                         <h4 class="text-light mb-0" style="font-weight: 900;">ALTUX</h4>
